assets/style/main.scss
body {
    padding: 0;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
}

a {
    font-family: 'Montserrat', sans-serif;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

p {
    margin: 0;
    padding: 0;
}

input,
select {
    border: 2px solid lightgrey;

    &:focus {
        border: 2px solid darkgrey;
    }
}

header {
    background-color: lightgrey;

    width: 100vw;
    font-size: 4vh;
    display: flex;
    justify-content: right;

    li {
        margin-right: 0.2em;
        display: inline;
    }

    a {
        color: black;
        text-decoration: none;

        &:hover {
            font-weight: bold;
        }
    }
}

.flip-types {
    margin-top: 4vh;
    font-size: 5vh;

    width: 100vw;
    display: flex;
    justify-content: space-evenly;

    li {
        text-align: center;
    }
}

.total-flips {
    margin-top: 5vh;
    font-size: 4vh;
    display: flex;
    justify-content: center;

    li {
        display: inline;
    }
}

.button-toss {
    margin-top: 8vh;
    display: flex;
    justify-content: center;

    button {
        background-color: lightgrey;
        border: none;
        color: black;
        font-family: 'Montserrat', sans-serif;
        padding: 2vh 14vw;
        text-align: center;
        display: inline-block;
        font-size: 3vh;

        &:hover {
            font-weight: bold;
        }

        &:active {
            transform: translateY(0.15vh);
            background-color: grey;
        }
    }
}

.settings {
    margin-top: 4vh;
    font-size: 2.75vh;

    input,
    select {
        height: 3.4vh;
        width: 40vw;
        font-size: 2.75vh;
        text-align: center;
        font-family: 'Montserrat', sans-serif;

        -ms-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        -webkit-box-sizing: border-box;
    }

    select {
        background: none;
        font-size: 2.4vh;
    }

    .section {
        ul {
            margin-bottom: 0.5vh;
            margin-left: 5vw;
            display: inline-block;
        }
    }
}

.button-settings {
    margin-top: 2vh;
    background-color: lightgrey;
    width: 100vw;

    .settings-button {
        border: none;
        background: none;
        padding-top: 0.2em;
        text-align: center;
        text-decoration: none;
        font-size: 1em;

        &:active {
            transform: translateY(0.15vh);

            &:hover {
                svg {
                    fill: white;
                }
            }

            svg {
                fill: white;
            }
        }

        &:hover {
            svg {
                fill: grey;
            }
        }

    }

    .button-reset {
        background: none;
        border: none;
        border-left: 1px solid darkgrey;
        border-right: 1px solid darkgrey;
        font-size: 2vh;
        vertical-align: top;
        font-size: 3vh;
        padding: 0 3vw;
        height: 7vh;


        &:hover {
            font-weight: bold;
        }

        &:active {
            transform: translateY(0.15vh);
            background-color: darkgrey;
        }
    }

    svg {
        margin-bottom: 0;
        pointer-events: none;
        width: 6vh;
        height: 6vh;
    }
}

.hero {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.footer {
    margin-top: auto;

    .inside {
        margin-top: 2vh;
        background-color: lightgrey;
        height: 4vh;
    }
}

.lds-circle {
    display: inline-block;
    transform: translateZ(1px);
}

.lds-circle>div {
    display: inline-block;
    width: 3.5vh;
    height: 3.5vh;
    margin: 0;
    border-radius: 50%;
    background: lightgrey;
    animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

@keyframes lds-circle {

    0%,
    100% {
        animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
    }

    0% {
        transform: rotateY(0deg);
    }

    50% {
        transform: rotateY(1800deg);
        animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
    }

    100% {
        transform: rotateY(3600deg);
    }
}

